assets/css/Site.css
*, *:before, *:after {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

html {
}

body {
    font-family: 'Arvo', serif !important;
    font-size: 16px;
	overflow-x: hidden;
}

#content h1 {
	font-size: 46px;
	font-weight: bold;
}

#content {
    padding: 20px;
    height: auto;
    max-width: 960px;
    margin: 0 auto;
}

footer {
	padding: 20px;
    height: auto;
    width: 960px;
    margin: 0 auto;
}

#banner {
    background-color: #E53935;
    width: 100%;
    overflow: hidden;
    display: block;
	min-height: 130px;
}

#banner * {
    color: white;
}

#titleAndImageWrapper {
    height: 100%;
	padding-top: 5px;
}

#navibar {
    margin: 0;
    background-color: #EF5350;
    text-align: center;
	border-radius: 0px !important;
	border: none;
}

#navibar *{
	border: none !important;
}

.navibar-margin {
    height: 70px;
}

.navbar-header {
	width: 100% !important;
}

#stickyImage {
    width: 50px;
    height: 50px;
    overflow: hidden;
    display: inline-block;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    border-radius: 50%;
    z-index: 1000;
	#float: left;
	margin-top: 12px;
	display: none;
}

#stickyImage img {
	display: inline;
    margin: 0 -40px;
    height: 100%;
    width: auto;
}

.navibar-options {
    height: 100%;
	width: 900px;
	margin: 0 auto;
}

#navbarCollapse {
	text-align: center;
	max-width: 960px;
	margin: 0 auto;
}

#navbarCollapse ul {
	float: none;
	display: inline-block;
	vertical-align: top;
}

.icon-bar {
	background-color: white !important;
}

.navibar-options li {
    float: left;
    -webkit-transition: background-color .3s linear;
    transition: background-color .3s linear;
}

#navbarCollapse li:hover {
    background-color: #E53935;
}


.navibar-options li a {
    text-decoration: none;
    padding: 14px 14px 14px 14px;
    height: 100%;
    width: 100%;
    display: block;
}

#header {
    text-align: center;
	height: 80px;
}

#ImageCropper {
    width: 70px;
    height: 70px;
    overflow: hidden;
    display: inline-block;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    border-radius: 50%;
    z-index: 1000;
}

#ProfilePic {
    display: inline;
    margin: 0 -40px;
    height: 100%;
    width: auto;
}

#Title {
    text-decoration: none;
    display: inline-block;
    position: relative;
    left: 10px;
    top: -20px;
}

#Title > a {
    text-decoration: none;
}

/*#CopyRight {
    position: fixed;
    bottom: 20px;
    margin: 0 auto;
}*/

.animate-top {
    opacity: 1;
}

.animate-scroll {
    -webkit-transition: all .1s linear;
    -moz-transition: all .1s linear;
    -o-transition: all .1s linear;
    transition: all .1s linear;
    transform: scale(.6,.6);

    position: fixed;
    top: -4px;
    left: 25%;
}

.BlogTitle {
    text-align: center;
}

.search-wrapper {
    display: inline-block;
    width: 100%;
}

.search-box {
    width: 100%;
    padding-right: 30px;
    display: inline-block;
    color: #424242 !important;
}

.search-icon {
    position: relative;
    float: right;
    right: 12px;
    top: 26px;
    color: #9e9e9e !important;
}

.social-wrapper {
    float: left;
    margin: 10px 0 0 0;
    position: absolute;
}

.social-wrapper > a {
    font-size: 30px;
    margin-right: 10px;
}

.MetaSection {
    margin: 5px 0 5px 0;
}

.Tag {
    padding: 5px 5px 5px 5px;
    background-color: #B3E5FC;
    border-radius: 5px;
    margin-right: 5px;
    cursor: pointer;
}

.Result {
    margin: 10px 0 40px 0;
    display: block;
    padding: 10px;
    border-radius: 5px;
    background-color: #ffffff;
    -webkit-transition: background-color .3s linear;
    transition: background-color .3s linear;
}

.Result:hover {
    background-color: #EEEEEE;
}

#navibar.affix {
    position: fixed;
    top: 0;
    width: 100%
}

/* entire container, keeps perspective */
.flip-container {
	perspective: 1000;
	float: left;
	margin-left: 10%;
}
	/* flip the pane when hovered */
	.flip-container:hover .flipper, .flip-container.hover .flipper {
		transform: rotateY(180deg);
	}

.flip-container, .front, .back {
	width: 50px;
	height: 100%;
	display: inline-block;
}

/* flip speed goes here */
.flipper {
	transition: 0.6s;
	transform-style: preserve-3d;

	position: relative;
}

/* hide back of pane during swap */
.front, .back {
	position: absolute;
	top: 0;
	left: 0;
}

/* front pane, placed above back */
.front {
	z-index: 2;
	/* for firefox 31 */
	transform: rotateY(0deg);
}

/* back, initially hidden pane */
.back {
	transform: rotateY(180deg);
}

